fixed sidenav so doesn't overlap navbar or footer, navbar is now sticky top

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 nav.navbar.navbar-default {
-  margin-bottom: 0;
+  margin-bottom: 0px;
 }
 
 #nav-banner{
@@ -23,4 +23,5 @@ nav.navbar.navbar-default {
 
 .navbar{
   display:flex;
+  
 }
